--- a/explorer/css/range-selector.css
+++ b/explorer/css/range-selector.css
@@ -48,7 +48,7 @@ input[type=range]::-webkit-slider-thumb {
 	cursor: pointer;
 	margin-top: calc(var(--barHeight) - (var(--diameter) / 1.3));
 	/* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
-	/* box-shadow: -100vw 0 0 100vw var(--shadowColor); */
+	box-shadow: 0 2px 3px rgba(0,0,0,.3);
 }
 
 /* All the same stuff for Firefox */
@@ -169,6 +169,7 @@ input[type=range]::-moz-range-progress {
 	border: 1px solid var(--color);
 	border-radius: 20px;
 	transition: all 0.3s ease-in 0s;
+	box-shadow: 0 2px 3px rgba(0,0,0,.3);
 }
 
 .onoffswitch-checkbox:checked+.onoffswitch-label {
